Responsive on mobile. Footer fixed.

--- a/style.css
+++ b/style.css
@@ -5,12 +5,17 @@
 }
 
 body {
-    padding: 0.7em;
+    font-size: 1rem;
+    min-height: 100vh;
+    display: grid;
+    grid-template-rows: auto 1fr auto;
 }
 
-/*main {
-    height: 35vw;
-}*/
+header, main {
+    max-width: 100vw;
+    max-height: fit-content;
+    padding: 0.7em;
+}
 
 .flex_row {
     display: flex;
@@ -29,6 +34,12 @@ body {
     margin-right: 0.7em;
 }
 
+.btn-success {
+    max-width: fit-content;
+    max-height: 3em;
+    margin-top: 2em;
+}
+
 #submit-button {
     margin: 0.7em 0;
 }
@@ -38,9 +49,17 @@ p.gpa {
 }
 
 footer {
-    position: absolute;
-    bottom: 0;
     background-color: #c7c6c6;
     width: 100vw;
     text-align: center;
 }
+
+@media all and (max-width: 600px) {
+    .input.flex_row {
+        flex-direction: column;
+    }
+    .btn-success {
+        margin-top: 1em;
+    }
+}
+
